...
                    )
                }
            }
            .navigationTitle("sample_title")
            .toolbar {
                ToolbarItem(placement: .primaryAction) {
                    Button("sample_add", systemImage: "plus") {
                        viewModel.startCreate()
                    }
                }
            }
            .sheet(isPresented: $viewModel.showForm) {
                SampleFormView(
...
